# kalman

./: .ghci  LICENCE  kalman.cabal  stack.yaml
src/: Experiment.hs
tests/: ComparisonBenchmark.hs  MatrixTest.hs  OneOfEach.hs  PureMatrixCalculation.hs  SampleMatrixData.hs  WrappedBlasLapackCalculation.hs
